--- a/src/scss/_upon.scss
+++ b/src/scss/_upon.scss
@@ -10,7 +10,7 @@
  
   input[type=text], select, textarea {
     max-width: 96%;
-    width: calc(var(--max-width) - 2px);
+    // width: calc(var(--max-width) - 2px);
     height: 10%;
     padding: .6rem;
     margin: 1%;
@@ -44,7 +44,7 @@
   
   .container {
     background-color: #91d694;
-    width: 97%;
+    width: 100%;
   }
  
   .center {
@@ -156,8 +156,6 @@
     border: 1px solid rgb(129, 128, 128);
     box-shadow: 3px 3px 7px #777;
     -webkit-box-shadow: 3px 3px 7px #777;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
     z-index: 999;
     overflow-x: auto;
     text-align: center;
