--- a/src/scss/_upon.scss
+++ b/src/scss/_upon.scss
@@ -9,7 +9,7 @@
   }
  
   input[type=text], select, textarea {
-    max-width: 96%;
+    max-width: 100%;
     // width: calc(var(--max-width) - 2px);
     height: 10%;
     padding: .6rem;
@@ -20,10 +20,10 @@
     resize: vertical;
   }
   
-  label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
-  }
+  // label {
+  //   padding: 12px 12px 12px 0;
+  //   display: inline-block;
+  // }
   
   .create input[type=submit] {
     background-color: #04AA6D;
