--- a/src/scss/_review.scss
+++ b/src/scss/_review.scss
@@ -1,71 +1,69 @@
 // * {
 //     box-sizing: border-box;
-//     max-width: 1240px; 
-// 	margin: 0 auto ; 
-// 	float: none !important; 
+//     max-width: 1240px;
+// 	margin: 0 auto ;
+// 	float: none !important;
 //   background-color: black;
 //   color: white;
 //   }
-  
-  input[type=text], select, button{
-    /* min-width: 270px; */
-    min-height: 18px;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: none;
-    margin: 3px;
-  }
-  textarea{
-    width: 100%;
-  }
-  fieldset{
-    // background-color: #f1f1f1;
-    border: none;
-    border-radius: 2px;
-    margin-bottom: 0%;
-    overflow: hidden;
-    padding: 0 1.625em;
+
+input[type='text'],
+select {
+  width: 100%;
+  min-height: 18px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: none;
+  margin: 3px;
 }
-  label {
-    padding: 12px 12px 12px 0px;
-    display: inline;
-    margin-right: 9px;
-    @media screen and (prefers-color-scheme: dark) {
-      color: #fff;
-    }
-    @media screen and (prefers-color-scheme: light) {
-      color: #000;
-    }
+textarea {
+  width: 100%;
+}
+fieldset {
+  border: none;
+  border-radius: 2px;
+  margin: 0%;
+  overflow: hidden;
+  padding: 0%;
+}
+label {
+  padding: 12px 12px 12px 0px;
+  display: inline;
+  margin-right: 9px;
+  width: 15%;
+  @media screen and (prefers-color-scheme: dark) {
+    color: #fff;
   }
-  select{
-    width: 200px;
+  @media screen and (prefers-color-scheme: light) {
+    color: #000;
   }
-  select.stars{
-    width: 1px;
-  }
-  
-span{
-  
-  padding-left: 3pt; 
 }
 
-.star{
+select.stars {
+  width: 1px;
+}
+
+span {
+  padding-left: 3pt;
+}
+
+.star {
   cursor: pointer;
   transition: color 200ms;
   // font-size: 2.5em;
 }
-p.star{
+p.star {
   display: inline;
 }
-.starEnvelope{
+.starEnvelope {
   max-width: 300px;
   margin: 3px;
-  margin-bottom: .5%;
+  margin-bottom: 0.5%;
   position: relative;
   left: $left-margin;
 }
-input[type="button"] {
+input[type='button'] {
   opacity: 20%;
   margin: 2px;
 }
@@ -76,35 +74,46 @@ input[type="button"] {
 //   position: relative;
 //   display: inline-block;
 //   margin-bottom: .5%;
-  
+
 // }
-label[for="star"] {
+label[for='star'] {
   position: relative;
   /* display:inline-block; */
-  top:10px;
+  top: 10px;
   /* left: px; */
   margin-bottom: 20px;
-
 }
-.procon-label{
+div.check-row {
+  display: flex;
+  flex-flow: row nowrap;
+  padding: 1%;
+  margin-left: 0;
+}
+.procon-label {
   margin: auto;
-    width: 100%;
+  width: 100%;
+}
+input[type='checkbox'] {
+  width: fit-content;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 .checkbox {
-  display: inline-flex;
+  display: flex;
+  flex-flow: row nowrap;
   cursor: pointer;
   position: relative;
-  left:$left-margin;
+  // left:$left-margin;
 }
 
 .checkbox > span {
-  color: #34495E;
+  color: #34495e;
   padding: 0.25rem 0.25rem;
 }
 
 .checkbox > input {
-  height: 22px;
-  width: 22px;
+  height: 32px;
+  width: 32px;
   -webkit-appearance: none;
   -moz-appearance: none;
   -o-appearance: none;
@@ -126,99 +135,109 @@ label[for="star"] {
   content: '\2713';
   display: block;
   text-align: center;
-  color: #41B883;
+  color: #41b883;
   position: absolute;
   left: -1.2rem;
   top: 0.2rem;
 }
 
 .checkbox > input:active {
-  border: 2px solid #34495E;
+  border: 2px solid #34495e;
 }
 
-  input[type=submit] {
-    background-color: #434257;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    height: 30px;
-    outline-style: ridge;
-    width: 33.3%;
-  }
-  
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  // input[type=date]{
-  //   width:270px;
-  //   padding-left: 50px;
-  // }
-  .date{
-    padding: .5em;
-  }
-  .container {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 10px;
-  }
-   .left-25 {
-    padding: 1%;
-    // text-align: left;
-  }
- 
-  .barrier {
-     margin-top: 6px;
-  }
-  
-  
-  h2,h3{ 
-    text-align: left;
-    display: block;
-    margin-block-start: .25em;
-    margin-block-end: .25em;
-  }
-  #selectCat{
-    width: 50%;
-  }
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-    /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other 
-  instead of next to each other */
-  @media screen and (max-width: 600px) {
-    // input[type=text], select, textarea {width: 100%;}
+input[type='submit'] {
+  background-color: #434257;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  height: 30px;
+  outline-style: ridge;
+  width: 33.3%;
+}
 
-    .left-25, .right-75 {
-      width: 100% !important;
-      // margin-top: 6px;
-      text-align: left;
-      padding: 0pt;
-    } 
-    .starEnvelope{
-      margin-left: 5%;
-      width: 70%;
-      padding-left: 0%;
-      padding-right: 0%;
-    }
-    input[type=text]{
-      max-width: 70%;
-      float:right
-    }
-    input[type=checkbox]{
-      float: left;
-    }
-    // label{
-    //   display: inline-flex;
-    //     padding: 0;
-    // }
-    input[type=date]{
-      float: right;
-    }
+input[type='submit']:hover {
+  background-color: #45a049;
+}
+// input[type=date]{
+//   width:270px;
+//   padding-left: 50px;
+// }
+.date-label {
+  width: 15%;
+  margin-left: $left-margin;
+}
+.date {
+  width: auto;
+  padding: 0.5em;
+}
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 10px;
+}
+.left-25 {
+  padding: 1%;
+  // text-align: left;
+}
+
+.barrier {
+  margin-top: 6px;
+}
+
+h2,
+h3 {
+  text-align: left;
+  display: block;
+  margin-block-start: 0.25em;
+  margin-block-end: 0.25em;
+}
+#selectCat {
+  width: 85%;
+}
+#RevName {
+  width: 85%;
+}
+#RevDate {
+  margin-left: 1%;
+}
+#RevURL {
+  width: 85%;
+}
+/* Clear floats after the columns */
+.check-row:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other 
+  instead of next to each other */
+@media screen and (max-width: 600px) {
+  .left-25,
+  .right-75 {
+    width: 100% !important;
+    // margin-top: 6px;
+    text-align: left;
+    padding: 0pt;
   }
-  
+  .starEnvelope {
+    margin-left: 5%;
+    width: 70%;
+    padding-left: 0%;
+    padding-right: 0%;
+  }
+  input[type='text'] {
+    float: right;
+  }
+  input[type='checkbox'] {
+    width: 1.5rem;
+    height: 1.5rem;
+    float: left;
+  }
+
+  input[type='date'] {
+    float: right;
+  }
+}
 
 /*# sourceMappingURL=main.css.map*/
