--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -66,54 +66,67 @@ html {
 [class^='large'] {
   width: 100%;
   height: 90%;
-  color: #062442;
+  color:#000;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4),
     0 6px 10px 0 rgba(240, 7, 7, 0.19);
+  border-top-right-radius: 7px;
+  border-top-left-radius: 7px;
   text-align: center;
   vertical-align: middle;
   padding: 1%;
   margin: 1%;
 }
 .large-center {
-  background-color: #eff308;
+  color: #cfad02;
+  background-color: #FFDB00;
   left: 0.7%;
 }
-.large-centerClicked {
-  background-color: #f5f842;
+.large-centerActive {
+  background-color: #FAFA37;
 }
 .large-left {
+  color: #2e7d42;
   background-color: #0a6120;
   left: 0.7%;
 }
-.large-leftClicked {
-  background-color: #30ba52;
+.large-leftActive {
+  background-color:  	#8FD400;
 }
 .large-right {
-  background-color: darkorange;
+  color: #94480a;
+  background-color: #C46210;
   left: 0.7%;
 }
-.large-rightClicked {
-  background-color: rgb(255, 204, 0);
+.large-rightActive {
+  background-color: #FF9933;
 }
 
 .header-title {
   position: relative;
-  top: 10%;
-  width: 20%;
+  color:transparent;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4),
+  0 6px 10px 0 rgba(240, 7, 7, 0.19);
+  width: 32.9%;
+  padding: 1%;
+  z-index: -1;
+  // margin: 1%;
+  margin-top: -3%;
+  // border-bottom-right-radius: 7px;
+  // border-bottom-left-radius: 7px;
 }
 #review-title {
   // position: relative;
   float: right;
-  color: darkorange;
-  left: 35%;
+  background-color: #FF9933;
+  left: 33.3%;
 }
 #show-view-title {
-  color: #30ba52;
-  left: -28%;
+  background-color: #8FD400;
+  left: -33.3%;
 }
 #category-title {
-  color: #f5f842;
-  left: -1%;
+  background-color: #FAFA37;
+  left: 0%;
 }
 .categorTree {
   position: relative;
