--- a/src/scss/_upon.scss
+++ b/src/scss/_upon.scss
@@ -5,14 +5,24 @@
   }
  
   input[type=text], select, textarea {
+    width: 80%;
     height: 10%;
-    padding: .6rem;
-    margin: 1%;
+    padding: .5rem;
+    margin: .5% ;
+
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
   }
-  
+  .inputBtn{
+    max-width: 18%;
+    height: 10%;
+    padding: .5rem;
+   }
+   .appendBtn{
+    margin: .5% ; 
+    margin-left: 81%;
+   }
   .create input[type=submit] {
     background-color: #04AA6D;
     color: white;
