--- a/src/scss/_upon.scss
+++ b/src/scss/_upon.scss
@@ -5,23 +5,38 @@
   }
  
   input[type=text], select, textarea {
-    width: 80%;
+    width: 85%;
     height: 10%;
-    padding: .5rem;
-    margin: .5% ;
+    margin: 0% 1% 4% ;
 
     border: 1px solid #ccc;
     border-radius: 4px;
     resize: vertical;
   }
   .inputBtn{
-    max-width: 18%;
-    height: 10%;
-    padding: .5rem;
+    position: relative;
+    max-width: 12%;
+    padding: .5%;
    }
-   .appendBtn{
+   
+   .material-symbols-outlined {
+     font-variation-settings:
+     'FILL' 0,
+     'wght' 400,
+     'GRAD' 0,
+     'opsz' 24
+   }
+.appendBtn{
+  padding: .5rem;
     margin: .5% ; 
-    margin-left: 81%;
+    margin-left: 86%;
+}
+
+   .deleteBtn{
+    position: relative;
+    padding: .5rem;
+    margin: 3% .5% -.5 ;
+    top: .5rem;
    }
   .create input[type=submit] {
     background-color: #04AA6D;
@@ -79,8 +94,8 @@
     height: 2em;
     outline-style: solid;
     width: 8em;
-    top: 1em;
-    left: 14em;
+    top: 0em;
+    left: 2em;
     text-align: center;
     margin-bottom: 10rem;
   }
@@ -198,10 +213,3 @@
   
   }
  
-  @media screen and (max-width: 338px) {
-    
-        h1{
-            font-size: 26px;
-        }
-    
-}
