--- a/src/scss/_upon.scss
+++ b/src/scss/_upon.scss
@@ -97,8 +97,8 @@
     height: 2em;
     outline-style: solid;
     width: 8em;
-    top: 0em;
-    left: 2em;
+    top: .5em;
+    left: 0em;
     text-align: center;
     margin-bottom: 10rem;
   }
