--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,9 +1,12 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 $left-margin: 7%;
 html {
   width: 99%;
   min-width: fit-content;
   overflow: scroll;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Poppins;
 }
 * {
   box-sizing: border-box;
@@ -15,8 +18,6 @@ html {
 }
 :root {
   --max-width: 1200px;
-  // --margin-left: calc((100%- var(--max-width))/2);
-  // --input-width: calc(var(--max-width) - var(--margin-left) )
   color-scheme: dark light;
 }
 @media screen and (prefers-color-scheme: dark) {
@@ -113,8 +114,6 @@ html {
   max-width: 99%;
   position: relative;
   color:transparent;
-  // box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4),
-  // 0 6px 10px 0 rgba(240, 7, 7, 0.19);
   width: 32.9%;
   padding: 1%;
   z-index: -1;
