--- a/src/scss/_show.scss
+++ b/src/scss/_show.scss
@@ -14,26 +14,40 @@
   }
   .categorTree {
     position: relative;
-    left: -3%;
+    left: 5%;
     margin-top: 2%;
-    width: 87%;
+    max-width: 48%;
   }
   .noCategories{
     position: relative;
     left: -left-margin;
     margin-top: 10%;
   }
+  .categories{
+    width: 100%;
+    margin-left: 1%;
+    margin-right: 1%;
+  }
   ul{
+    max-width: 50%;
     list-style: none;
     list-style-type: none;
     margin: 0;
     padding: 0;
   }
   li{
+    display:flex;
+    flex-direction: row;
     list-style: none;
     list-style-type: none;
+    width: 50%;
+    padding-left: 0%;
+    margin-left: 0%;
+    margin-right: 0%;
+    
     
   }
+  
   .MuiButton-root{
     position: relative;
     width:50%;
@@ -42,17 +56,19 @@
     margin-top: 0%;
     background-color: transparent;
     border: none;
-    padding-left: 5%;
+    align-items: flex-start;
+    // padding-left: 5%;
     
   }
 
   .MuiRating-root{
     position: relative;
-    width: 1.4ch;
+    width: 1ch;
     margin-top: 0%;
     background-color: transparent;
     border-color: #fbc793;
     margin-left: 0%;
+    // padding-bottom: 3%;
   }
   .MuiRating-iconFilled{
     color: #FF9933;
@@ -63,8 +79,26 @@
   }
   .column {
   flex-flow: column;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
+  }
+
 .right{
- padding-left:150%;
+  width:50%;
+margin-left:75%;
+
+}
+.columns{
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  align-content: flex-start;
+  width: 100%;
+  margin: 0% 0% 0% -7%;
+  padding-left: 0%;
+  padding-right: 0%;
+  padding-top: 0%;
+  padding-bottom: 0%;
+  border: 0px solid black;
+  // outline: 1px solid red;
 }
