--- a/src/scss/_show.scss
+++ b/src/scss/_show.scss
@@ -1,92 +1,9 @@
-#review-title {
-    // position: relative;
-    float: right;
-    background-color: #FF9933;
-    left: 33.3%;
-  }
-  #show-view-title {
-    background-color: #8FD400;
-    left: -33.3%;
-  }
-  #category-title {
-    background-color: #FAFA37;
-    left: 0%;
-  }
-  .categorTree {
-    position: relative;
-    left: 5%;
-    margin-top: 2%;
-    max-width: 48%;
-  }
-  .noCategories{
-    position: relative;
-    left: -left-margin;
-    margin-top: 10%;
-  }
-  .categories{
-    width: 100%;
-    margin-left: 1%;
-    margin-right: 1%;
-  }
-  ul{
-    max-width: 50%;
-    list-style: none;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  li{
-    display:flex;
-    flex-direction: row;
-    list-style: none;
-    list-style-type: none;
-    width: 50%;
-    padding-left: 0%;
-    margin-left: 0%;
-    margin-right: 0%;
-    
-    
-  }
-  
-  .MuiButton-root{
-    position: relative;
-    width:50%;
-    word-break: keep-all;
-    white-space: nowrap;
-    margin-top: 0%;
-    background-color: transparent;
-    border: none;
-    align-items: flex-start;
-    // padding-left: 5%;
-    
-  }
-
-  .MuiRating-root{
-    position: relative;
-    width: 1ch;
-    margin-top: 0%;
-    background-color: transparent;
-    border-color: #fbc793;
-    margin-left: 0%;
-    // padding-bottom: 3%;
-  }
-  .MuiRating-iconFilled{
-    color: #FF9933;
-    border-color: #fbc793;
-  }
-  .MuiRating-iconEmpty{
-    border-color: lightgray;
-  }
-  .column {
-  flex-flow: column;
-  }
-
-.right{
-  width:50%;
-margin-left:75%;
-
+.noCategories {
+  position: relative;
+  left: -left-margin;
+  margin-top: 10%;
 }
-.columns{
+.columns {
   display: flex;
   flex-direction: row-reverse;
   flex-wrap: wrap;
@@ -94,11 +11,73 @@ margin-left:75%;
   align-items: flex-start;
   align-content: flex-start;
   width: 100%;
-  margin: 0% 0% 0% -7%;
-  padding-left: 0%;
-  padding-right: 0%;
-  padding-top: 0%;
-  padding-bottom: 0%;
+  margin: 0% 0% 0% 0%;
+  padding: 0% 0% 0% 0%;
   border: 0px solid black;
+  outline: 1px solid red;
+}
+.categorTree {
+  position: relative;
+  left: 1%;
+  margin-top: 2%;
+  max-width: 100%;
   // outline: 1px solid red;
 }
+.categories {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-left: 1%;
+  margin-right: 1%;
+}
+// .review {
+//   display: flex row reverse;
+// }
+header {
+  display: flex row;
+  flex-flow: row nowrap;
+}
+.MuiBox-root {
+    padding-top: 2%;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: left;
+}
+.MuiButton-root {
+  position: relative;
+  width: 50%;
+  word-break: keep-all;
+  white-space: nowrap;
+  margin-top: 0%;
+  background-color: transparent;
+  border: none;
+  align-items: flex-start;
+  padding: 0% 0% 0% 0%;
+}
+
+.MuiRating-root {
+  position: relative;
+  width: 1ch;
+  background-color: transparent;
+  border-color: #fbc793;
+  
+  padding: 0% 0% 5% 0%;
+  // outline: 1px solid red;
+}
+.MuiRating-iconFilled {
+  color: #ff9933;
+  border-color: #fbc793;
+}
+.MuiRating-iconEmpty {
+  border-color: lightgray;
+}
+.column {
+  flex-flow: column;
+}
+
+.right {
+  width: 50%;
+  margin-left: 75%;
+}
+
+
