--- a/src/scss/_show.scss
+++ b/src/scss/_show.scss
@@ -13,8 +13,7 @@
   width: 100%;
   margin: 0% 0% 0% 0%;
   padding: 0% 0% 0% 0%;
-  border: 0px solid black;
-  outline: 1px solid red;
+  // outline: 1px solid red;
 }
 .categorTree {
   position: relative;
@@ -29,13 +28,6 @@
   width: 100%;
   margin-left: 1%;
   margin-right: 1%;
-}
-// .review {
-//   display: flex row reverse;
-// }
-header {
-  display: flex row;
-  flex-flow: row nowrap;
 }
 .MuiBox-root {
     padding-top: 2%;
