--- a/src/scss/_show.scss
+++ b/src/scss/_show.scss
@@ -1,3 +1,6 @@
+.show-view{
+  padding-left: 3rem;
+}
 .noCategories {
   position: relative;
   left: -left-margin;
@@ -29,15 +32,24 @@
   margin-left: 1%;
   margin-right: 1%;
 }
+.MuiCard-root{
+  padding-left:1rem;
+  padding-bottom:3rem;
+}
+.MuiCardContent-root {
+  display: flex;
+  padding: 0% 0% 0% 0%;
+}
 .MuiBox-root {
     padding-top: 2%;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
+    flex-flow:nowrap;
     align-items: left;
 }
 .MuiButton-root {
   position: relative;
-  width: 50%;
+  width: 7%;
   word-break: keep-all;
   white-space: nowrap;
   margin-top: 0%;
@@ -63,6 +75,10 @@
 .MuiRating-iconEmpty {
   border-color: lightgray;
 }
+.show-rating{
+  position: relative;
+  left:70%;
+}
 .column {
   flex-flow: column;
 }
@@ -70,6 +86,10 @@
 .right {
   width: 50%;
   margin-left: 75%;
+}
+.proConBox{
+  display: flex;
+  flex-direction: column
 }
 
 
