--- a/src/scss/_show.scss
+++ b/src/scss/_show.scss
@@ -85,8 +85,8 @@ visibility: hidden;
 }
 .show-rating{
   position: relative;
-  left:-50%;
-  top: 50%
+  margin-left:20%;
+  margin-top: 0%
 }
 .column {
   flex-flow: column;
