--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -22,7 +22,7 @@ html {
 }
 @media screen and (prefers-color-scheme: dark) {
   p,a,h2,h3,h4,h5,h6,span,label/* ,:placeholder-shown */ {
-    color: #f66809;
+    color:  #f66809,
   }
   body,
   div.container {
