--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,21 +2,19 @@
 
 $left-margin: 7%;
 html {
-  width: 99%;
+  max-width: 98%;
   min-width: fit-content;
   overflow: scroll;
   font-family: Poppins;
 }
 * {
   box-sizing: border-box;
-  max-width: 1200px;
   margin: 0 auto;
   float: none !important;
-  // outline: 1px solid red;
-  width: 99%;
+  // outline: "1px solid red";
+  width: 98%;
 }
 :root {
-  --max-width: 1200px;
   color-scheme: dark light;
 }
 @media screen and (prefers-color-scheme: dark) {
@@ -53,7 +51,7 @@ html {
   }
   body,
   div.container {
-    background-color: hsl(40, 91%, 91%);
+    background-color: white;
     border: 3px solid rgb(0, 0, 0);
     padding-bottom: 10rem;
   }
@@ -72,7 +70,7 @@ html {
   visibility: hidden;
 }
 @mixin large {
-  width: 98%;
+  width: 100%;
   height: 90%;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4),
     0 6px 10px 0 rgba(240, 7, 7, 0.19);
@@ -80,7 +78,7 @@ html {
   border-top-left-radius: 7px;
   text-align: center;
   vertical-align: middle;
-  padding: 1%;
+  padding: 1% 0%;
   margin: 1% 0;
   color: #000;
 }
@@ -143,17 +141,32 @@ html {
   z-index: -1;
   margin-top: -3%;
 }
+@media screen and (min-width:1250px)
+{
+  :root,body,html,*{
+    max-width:1200px;
+  }
+}
 @media screen and (max-width: 860px){
+  :root,body,html,*{
+    max-width:750px
+  }
   #show-view-title {
     left: -39%;
   }
 }
 @media screen and (max-width: 750px){
+  :root,body,html,*{
+    max-width:660px
+  }
   #show-view-title {
     left: -41%;
   }
 }
 @media screen and (max-width: 600px) {
+  :root,body,html,*{
+    max-width:510px
+  }
   .MuiCardContent-root {
     padding-left: 0%;
   }
@@ -173,7 +186,7 @@ html {
 }
 @media screen and (max-width: 409px) {
   [class^='large'] {
-    margin-left: -3%;
+    margin-left: -5%;
     padding-left: 0%;
     padding-right: 0%;
   }
